agrege los jugadores de la pag de basket

--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -32,13 +32,37 @@
             </div>
         </div>
     </header>
-    <h1>Jugadores mas destacados del basket</h1>
-    <div class="Malone">
-        <img src="../assets/imagenes/maloneB.png" alt="">
-        <p>Karl Anthony Malone es un exjugador de baloncesto estadounidense, miembro del Basketball Hall of Fame que disputó 19 
-            temporadas en la NBA, 18 de ellas en los Utah Jazz, donde formó, junto con el base John Stockton, una de las parejas 
-            más relevantes de la historia de la NBA.​​</p>
+    <div class="padre1 row container-fluid">
+        <h1>Jugadores mas destacados del basket</h1>
+        <br>
+        <div class="Malone" style="width: 20rem;">
+            <img src="../assets/imagenes/maloneB.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Karl Anthony Malone es un exjugador de baloncesto estadounidense, miembro del
+                Basketball Hall of Fame que disputó 19 temporadas en la NBA, 18 de ellas en los Utah Jazz, donde 
+                formó, junto con el base John Stockton, una de las parejas más relevantes de la historia de la NBA.​​.</p>
+            </div>
+        </div>
+        <br>
+        <div class="Barkley" style="width: 20rem;">
+            <img src="../assets/imagenes/barkley.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Charles Wade Barkley es un exjugador de baloncesto estadounidense que jugó durante dieciséis 
+                temporadas en la NBA desde 1984 a 2000. Con sus 1,98 metros de altura, está considerado uno de los mejores 
+                ala-pívots bajos en la historia de la liga</p>
+            </div>
+        </div>
+        <br>
+        <div class="Jonh" style="width: 20rem;">
+            <img src="../assets/imagenes/jonh.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">John Houston Stockton es un exjugador de baloncesto estadounidense cuya trayectoria profesional, entre 1984 y 
+                2003 transcurrió íntegramente en el equipo Utah Jazz de la NBA. Con 1,85 metros de altura, está considerado uno de los mejores 
+                bases de la historia del baloncesto</p>
+            </div>
+        </div>
     </div>
+    
     <h1>Mapa de algunas cnachas de basket</h1>
     <div class="mapaB">
         <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d420384.05858289736!2d-58.4161919700843!3d-34.59782771278762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20basquet!5e0!3m2!1ses-419!2sar!4v1732482785890!5m2!1ses-419!2sar"></iframe>
