--- a/paginas/Hockey.html
+++ b/paginas/Hockey.html
@@ -9,6 +9,35 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="row container-fluid" id="header">
+        <div class="logoP col-lg-7">
+            <img src="../assets/iconos/logo.png" alt="">
+            <h1>Healthy Balance</h1>
+        </div>
 
+        <div class="maslogos col-lg-5">
+            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
+            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
+            <a href="" data-bs-toggle="dropdown"><img class="menu" src="../assets/iconos/menu.png" alt=""></a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Inicio</a>
+                <a class="dropdown-item" href="">Nutricion</a>
+                <a class="dropdown-item" href="paginas/Futbol.html">Futbol</a>
+                <a class="dropdown-item" href="">Tenis</a>
+                <a class="dropdown-item" href="">Basket</a>
+                <a class="dropdown-item" href="">Voley</a>
+                <a class="dropdown-item" href="">Natacion</a>
+                <a class="dropdown-item" href="">Hockey</a>
+            </div>
+        </div>
+    </header>
+
+    <div class="Ho-cont1">
+        <div class="Ho-contHijo1">
+            <h2>¿Qué es la Natacion?</h2>
+            <p> La natación en los Juegos Olímpicos es un deporte tanto individual como colectivo en el que los nadadores impulsan su cuerpo a través del agua mediante el uso de las extremidades corporales y por lo general sin utilizar ningún instrumento o apoyo para avanzar. Esto lo hacen en una piscina al aire libre o cubierta utilizando uno de los siguientes estilos: estilo libre, espalda, braza o mariposa.</p>
+        </div>
+
+    </div>
 </body>
 </html>
