--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -32,7 +32,6 @@
             </div>
         </div>
     </header>
-<<<<<<< HEAD
     <div class="padre1 row container-fluid">
         <h1>Jugadores mas destacados del basket</h1>
         <br>
@@ -62,29 +61,42 @@
                 bases de la historia del baloncesto</p>
             </div>
         </div>
+        <div class="marcos-bas">
+            <img src="" alt="">
+        </div>
     </div>
     
     <h1>Mapa de algunas cnachas de basket</h1>
     <div class="mapaB">
         <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d420384.05858289736!2d-58.4161919700843!3d-34.59782771278762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20basquet!5e0!3m2!1ses-419!2sar!4v1732482785890!5m2!1ses-419!2sar"></iframe>
     </div>
-=======
-
-    <section class="row">
-        <div class="cont1 contBordes col-lg-4">
-            <img src="" class="juador1">
-            <h2></h2>
+    <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="../assets/imagenes/balonbas.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/imagenes/bandabas.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/imagenes/rodillerasbol.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/imagenes/ropabas.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/imagenes/zapatosbol.png" class="d-block w-100">
+          </div>
         </div>
-        <div class="cont2 contBordes col-lg-4">
-            <img src="" class="jugador2">
-            <h2></h2>
-        </div>
-        <div class="cont3 contBordes col-lg-4">
-            <img src="" class="jugador3">
-            <h2></h2>
-        </div>
-    </section>
-
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -118,6 +130,6 @@
             <p>&copy; 2024 Your comapny . all rights reserved</p>
         </div>
     </footer>
->>>>>>> eebb27b185a6cb99fe7a9cc3778c139a679baaf3
+
 </body>
 </html>
