--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../css/mainF.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina sobre el futbol, como se juega, mejoras que te otroga jugar al futbol, lugares para jugarl al futbol como canchas o clubs">
+    <meta name="keywords" content="Futbol, Messi, argentina, seleccion argentina, escuela de futbol, clubs de futbol, boca, bombonera, river, monumental, como se juega al futbol, partidos de futbol, fecha del campeonato futbol, ejercicio, salud, deporte, mejoras del futbol, premier lueague, Scaloni, tyc sport, espn, canchas, canchas de futbol ">
     <title>Deporte - Futbol</title>
 </head>
 <body>
