--- a/paginas/Tenis.html
+++ b/paginas/Tenis.html
@@ -14,7 +14,7 @@
     <header class="row container-fluid" id="header">
         <div class="logoP col-lg-7">
             <img src="../assets/iconos/logo.png" alt="">
-            <h1>Tenis</h1>
+            <h1>TENIS</h1>
         </div>
         <div class="maslogos col-lg-5">
             <button type="button" class="btn btn-outline-light"><a href="../paginas/registro.html"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></a></button>
