--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -14,21 +14,20 @@
     <header class="row container-fluid" id="header" style="background-color: white;">
         <div class="logoP col-lg-7">
             <img src="../assets/iconos/logo.png" alt="">
-            <h1>Healthy Balance</h1>
+            <h1>FUTBOL</h1>
         </div>
         <div class="maslogos col-lg-5">
             <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
             <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
             <a href="" data-bs-toggle="dropdown"><img class="menu" src="../assets/iconos/menu.png" alt=""></a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="">Inicio</a>
-                <a class="dropdown-item" href="">Nutricion</a>
-                <a class="dropdown-item" href="paginas/Futbol.html">Futbol</a>
+                <a class="dropdown-item" href="../index.html">Inicio</a>
+                <a class="dropdown-item" href="../paginas/Nutricion.html">Nutricion</a>
                 <a class="dropdown-item" href="../paginas/Tenis.html">Tenis</a>
-                <a class="dropdown-item" href="">Basket</a>
-                <a class="dropdown-item" href="">Voley</a>
-                <a class="dropdown-item" href="">Natacion</a>
-                <a class="dropdown-item" href="">Hockey</a>
+                <a class="dropdown-item" href="../paginas/Basquetball.html">Basket</a>
+                <a class="dropdown-item" href="../paginas/Volley.html">Voley</a>
+                <a class="dropdown-item" href="../paginas/Natacion.html">Natacion</a>
+                <a class="dropdown-item" href="../paginas/Hockey.html">Hockey</a>
             </div>
         </div>
     </header>
@@ -93,6 +92,39 @@
         </div>
     </div>
     <br>
-   
+    <br><br><br><br>
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <h3>Contact Ups</h3>
+                <p>Gmail:infotdbas@udsasbfua</p>
+                <p>Numero:4124142141244</p>
+                <p>Informacion:</p>
+            </div>
+            <div class="footer-content">
+                <h3>Paginas</h3>
+                <ul class="list">
+                    <li><a href="" class="a-footer">Futbol</a></li>
+                    <li><a href="" class="a-footer">Tenis</a></li>
+                    <li><a href="" class="a-footer">Natación</a></li>
+                    <li><a href="" class="a-footer">Hockey</a></li>
+                    <li><a href="" class="a-footer">Voley</a></li>
+                    <li><a href="" class="a-footer">Basquet</a></li>
+                </ul>
+            </div>
+            <div class="footer-content">
+                <ul class="social-icons">
+                    <h3>Redes</h3>
+                     <li><a href="" class="a-footer"><i class="fab fa-facebook"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-twitter"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="" class="a-footer"><i class="fab fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="bottom-bar">
+            <p>&copy; 2024 Your comapny . all rights reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
