rutinas terminado y favicon pag princ

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Una pagina especializada en deportes y salud para tu cuidado, informandote de dietas, actividades deportivas y productos para ello">
     <meta name="keywords" content="Nutricion, Salud, Deportes, actividades, rutinas, dieta, futbol, volley, basquet, basquetball, tenis, natacion, hockey, cuidados, ejercicio, deportes caba, Healthy Balance, tienda cuidados">
+    <link rel="icon" href="assets/iconos/logo.png" type="image/x-icon">
     <title>Healthy Balance</title>
 </head>
 <body id="body">
