--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -32,10 +32,6 @@
             </div>
         </div>
     </header>
-<<<<<<< HEAD
-=======
-
->>>>>>> 376a5b1079df0918cd2b8850a5686db757297fa7
     <div class="padre1 row container-fluid">
         <h1>Jugadores mas destacados del basket</h1>
         <br>
@@ -65,41 +61,84 @@
                 bases de la historia del baloncesto</p>
             </div>
         </div>
-        <div class="marcos-bas">
-            <img src="" alt="">
+    </div>
+    <br>
+    <div class="container">
+        <div class="card">
+            <img src="../assets/imagenes/logo-Golden State.jpg" width="310" height="250">
+            <div class="card__head">Golden State
+            </div>
+            <div class="card__head">Dueño:Joe Lacob</div>
+        </div>
+        <div class="card">
+            <img src="../assets/imagenes/logo-clippers.png" width="240" height="250">
+            <div class="card__head">Los Angeles Clippers
+            </div>
+            <div class="card__head">Dueño:Steve Ballmer</div>
+        </div>
+        <div class="card">
+            <img src="../assets/imagenes/logo-lakers.png" width="290" height="250">
+            <div class="card__head">Los Angeles Lakers</div>
+            <div class="card__head">Dueño:Jeanie Buss</div>
+        </div>
+        <div class="card" >
+            <img src="../assets/imagenes/logo-phoenix2.avif" width="275" height="250">
+            <div class="card__head">Phoenix Suns</div>
+            <div class="card__head">Dueño:Mat Ishbia</div>
         </div>
     </div>
+
+    <div id="carouselExampleCaptions" class="carousel slide carrusel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/imagenes/zapatilla-basquet" class="d-block w-100 carruselimg">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Zapatilla Run 72</h5>
+              <p>$99.999</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/imagenes/produc29.png" class="d-block w-100 carruselimg">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Zapatilla Runfalcon 5</h5>
+              <p>$79.999</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/imagenes/produc30.png" class="d-block w-100 carruselimg">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Zapatilla Fluidup</h5>
+              <p>$91.940</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
     
     <h1>Mapa de algunas cnachas de basket</h1>
     <div class="mapaB">
         <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d420384.05858289736!2d-58.4161919700843!3d-34.59782771278762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20basquet!5e0!3m2!1ses-419!2sar!4v1732482785890!5m2!1ses-419!2sar"></iframe>
     </div>
-<<<<<<< HEAD
-    <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="../assets/imagenes/balonbas.png" class="d-block w-100">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/imagenes/bandabas.png" class="d-block w-100">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/imagenes/rodillerasbol.png" class="d-block w-100">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/imagenes/ropabas.png" class="d-block w-100">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/imagenes/zapatosbol.png" class="d-block w-100">
-          </div>
-=======
+
+
 
 
     <section class="row">
         <div class="cont1 contBordes col-lg-4">
             <img src="" class="juador1">
             <h2></h2>
->>>>>>> 376a5b1079df0918cd2b8850a5686db757297fa7
+
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -121,12 +160,12 @@
             <div class="footer-content">
                 <h3>Paginas</h3>
                 <ul class="list">
-                    <li><a href="" class="a-footer">Futbol</a></li>
-                    <li><a href="" class="a-footer">Tenis</a></li>
-                    <li><a href="" class="a-footer">Natación</a></li>
-                    <li><a href="" class="a-footer">Hockey</a></li>
-                    <li><a href="" class="a-footer">Voley</a></li>
-                    <li><a href="" class="a-footer">Basquet</a></li>
+                    <li><a href="Futbol.html" class="a-footer">Futbol</a></li>
+                    <li><a href="Tenis.html" class="a-footer">Tenis</a></li>
+                    <li><a href="Natacion.html" class="a-footer">Natación</a></li>
+                    <li><a href="Hockey.html" class="a-footer">Hockey</a></li>
+                    <li><a href="Volley.html" class="a-footer">Voley</a></li>
+                    <li><a href="Nutricion.html" class="a-footer">Nutricion</a></li>
                 </ul>
             </div>
             <div class="footer-content">
@@ -143,9 +182,5 @@
             <p>&copy; 2024 Your comapny . all rights reserved</p>
         </div>
     </footer>
-<<<<<<< HEAD
-
-=======
->>>>>>> 376a5b1079df0918cd2b8850a5686db757297fa7
 </body>
 </html>
