--- a/paginas/Hockey.html
+++ b/paginas/Hockey.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Deporte - Hockey</title>
 </head>
 <body>
     <header class="row container-fluid" id="header">
@@ -33,11 +33,116 @@
     </header>
 
     <div class="Ho-cont1">
-        <div class="Ho-contHijo1">
-            <h2>¿Qué es la Natacion?</h2>
-            <p> La natación en los Juegos Olímpicos es un deporte tanto individual como colectivo en el que los nadadores impulsan su cuerpo a través del agua mediante el uso de las extremidades corporales y por lo general sin utilizar ningún instrumento o apoyo para avanzar. Esto lo hacen en una piscina al aire libre o cubierta utilizando uno de los siguientes estilos: estilo libre, espalda, braza o mariposa.</p>
-        </div>
+            <div class="Ho-contHijo1">
+                <h2>¿Qué es el Hockey sobre Hielo?</h2>
+                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem aperiam nam odio repellendus nostrum dolores sed atque dicta maxime tempore et similique non, aliquid repellat totam illo dolor accusantium illum.</p>
+            </div>
+
+            <div class="contCardHo">
+                <div class="cardHo">
+                    <div class="containerHo">
+                    <img
+                        src="../assets/imagenes/hockey1.jpg"
+                        alt=""
+                    />
+                    <h1>Hi Mom</h1>
+                    <p class="texto-explicativo">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
+                        iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
+                    </p>
+                    </div>
+                </div>   
+                <div class="cardHo">
+                    <div class="containerHo">
+                    <img
+                        src="../assets/imagenes/hockey1.jpg"
+                        alt=""
+                    />
+                    <h1>Hi Mom</h1>
+                    <p class="texto-explicativo">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
+                        iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
+                    </p>
+                    </div>
+                </div>   
+                <div class="cardHo">
+                    <div class="containerHo">
+                    <img
+                        src="../assets/imagenes/hockey1.jpg"
+                        alt=""
+                    />
+                    <h1>Hi Mom</h1>
+                    <p class="texto-explicativo">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
+                        iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
+                    </p>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="contCardHo">
+                <div class="cardHo">
+                    <div class="containerHo">
+                    <img
+                        src="../assets/imagenes/hockey1.jpg"
+                        alt=""
+                    />
+                    <h1>Hi Mom</h1>
+                    <p class="texto-explicativo">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
+                        iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
+                    </p>
+                    </div>
+                </div>   
+                <div class="cardHo">
+                    <div class="containerHo">
+                    <img
+                        src="../assets/imagenes/hockey1.jpg"
+                        alt=""
+                    />
+                    <h1>Hi Mom</h1>
+                    <p class="texto-explicativo">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
+                        iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
+                    </p>
+                    </div>
+                </div>   
+                <div class="cardHo">
+                    <div class="containerHo">
+                    <img
+                        src="../assets/imagenes/hockey1.jpg"
+                        alt=""
+                    />
+                    <h1>Hi Mom</h1>
+                    <p class="texto-explicativo">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
+                        iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
+                    </p>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="row container-fluid contFut-grande-mapaHo">
+                <h1>PUNTOS DE ACTIVIDAD</h1>
+                <div class="lineaHo">
+
+                </div>
+                <div class="container-fluid contfut-mapaHo">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26280.332501729314!2d-58.500377938983036!3d-34.577814875530535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sclub%20natacion!5e0!3m2!1ses-419!2sar!4v1732026784596!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+
 
     </div>
+
+    <!-- IMPORTANTE: TARJETA NUEVA _hockey.scss-->
+
+    <div class="tarjeta">
+        <img src="https://via.placeholder.com/150" alt="Imagen del producto" class="tarjeta-imagen" />
+        <div class="tarjeta-contenido">
+          <h3 class="tarjeta-titulo">Título de la tarjeta</h3>
+          <p class="tarjeta-descripcion">Un ejemplo rápido de texto para completar el contenido de la tarjeta.</p>
+        </div>
+      </div>
 </body>
 </html>
