--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -3,7 +3,6 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
     <link rel="stylesheet" href="../css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -87,7 +86,6 @@
             <div class="card__head">Dueño:Mat Ishbia</div>
         </div>
     </div>
-
     <div id="carouselExampleCaptions" class="carousel slide carrusel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -96,24 +94,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/imagenes/zapatilla-basquet" class="d-block w-100 carruselimg">
+            <img src="../assets/imagenes/ropabas.png" class="d-block w-100 carrusel-img">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Zapatilla Run 72</h5>
-              <p>$99.999</p>
+              <h5>Remera y Pantalones</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/imagenes/produc29.png" class="d-block w-100 carruselimg">
+            <img src="../assets/imagenes/zapatilla-basquet.png" class="d-block w-100 carrusel-img">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Zapatilla Runfalcon 5</h5>
-              <p>$79.999</p>
+              <h5>Zapatillas</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/imagenes/produc30.png" class="d-block w-100 carruselimg">
+            <img src="" class="d-block w-100 carrusel-img">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Zapatilla Fluidup</h5>
-              <p>$91.940</p>
+              <h5></h5>
             </div>
           </div>
         </div>
@@ -125,30 +120,13 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+    </div>
+
     
-    <h1>Mapa de algunas cnachas de basket</h1>
+    <h1 class="titulo-mapa">Mapa de algunas canchas de basket</h1>
     <div class="mapaB">
         <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d420384.05858289736!2d-58.4161919700843!3d-34.59782771278762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20basquet!5e0!3m2!1ses-419!2sar!4v1732482785890!5m2!1ses-419!2sar"></iframe>
     </div>
-
-
-
-
-    <section class="row">
-        <div class="cont1 contBordes col-lg-4">
-            <img src="" class="juador1">
-            <h2></h2>
-
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
     <footer>
         <div class="container">
             <div class="footer-content">
