agrande el mapa

--- a/paginas/Volley.html
+++ b/paginas/Volley.html
@@ -11,13 +11,12 @@
     <title>Healthy Balance</title>
 </head>
 <body>
-    
     <header class="row container-fluid" id="header">
-        <div class="logoP col-lg-7">
+        <div class="logoP">
             <img src="../assets/iconos/logo.png" alt="">
             <h1>Healthy Balance</h1>
         </div>
-        <div class="maslogos col-lg-5">
+        <div class="maslogos">
             <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
             <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
             <a href="" data-bs-toggle="dropdown"><img class="menu" src="../assets/iconos/menu.png" alt=""></a>
@@ -33,7 +32,7 @@
             </div>
         </div>
     </header>
-    <div class="padre1">
+    <div class="padre1 col-slg-6">
         <h1>Voley</h1>
         <p class="parrafo1 animado">El voleibol, o vóley, es un deporte de equipo donde dos grupos de seis jugadores se enfrentan en una cancha 
         dividida por una roja. El objetivo es pasar el balón por encima de la red y hacerlo tocar el suelo del lado 
@@ -70,25 +69,27 @@
         </div>
     </div>
     <br>
-    <h1 class="jugadores">Los 3 jugadores mas importantes del voley</h1>
-    <div class="karchEEUU"> 
-            <img src="../assets/imagenes/karchEEUU.png" style="border-radius: 40px;" width="520px" height="200px"> 
-            <p>LAUSANA, Suiza, 5 de febrero de 2019 - Charles Frederick "Karch" Kiraly es una de las verdaderas leyendas del voleibol. Es el único jugador en la historia que ha ganado el oro olímpico en voleibol (1984 y 1988) y voleibol de playa (1996), cuando el deporte hizo su debut en los Juegos Olímpicos.</p> 
-    </div>
-    <div class="gibaBR"> 
-        <img src="../assets/imagenes/gibaBR.jpeg" style="border-radius: 40%;"> 
-        <p>Nacido el 23 de diciembre de 1976 en Londrina, el zurdo punta que mide 1,92 metro y pesa 85 kilos, sorteó varios momentos complicados en su vida. Nació en una favela, tuvo leucemia de chico, un accidente desembocó en más de cien puntos de sutura en un brazo y hasta afrontó una suspensión por consumo de marihuana.</p> 
-    </div>
-    <div class="regoBR"> 
-        <img src="../assets/imagenes/RegoBR2.png" style="border-radius: 40%;"> 
-        <p>Emanuel Fernando Scheffler Rego (Curitiba, Brasil, 15 de abril de 1973) es un jugador de voleibol de playa brasileño. Tiene 3 medallas olímpicas: oro en Atenas 2004, plata en Londres 2012 y bronce en Beijing 2008. También fue tres veces campeón del mundo (1999, 2003 y 2011). Se retiró como el único atleta de voleibol de playa que ha participado en cinco ediciones de los Juegos Olímpicos (1996 a 2012), junto a la australiana Natalie Cook</p> 
+    <div class="contvol-4">
+      <h1 class="jugadores">Los 3 jugadores mas importantes del voley</h1>
+        <div class="karchEEUU"> 
+                <img src="../assets/imagenes/karchEEUU.png" style="border-radius: 40px;" width="520px" height="200px"> 
+                <p>LAUSANA, Suiza, 5 de febrero de 2019 - Charles Frederick "Karch" Kiraly es una de las verdaderas leyendas del voleibol. Es el único jugador en la historia que ha ganado el oro olímpico en voleibol (1984 y 1988) y voleibol de playa (1996), cuando el deporte hizo su debut en los Juegos Olímpicos.</p> 
+        </div>
+        <div class="gibaBR"> 
+            <img src="../assets/imagenes/gibaBR.jpeg" style="border-radius: 40%;"> 
+            <p>Nacido el 23 de diciembre de 1976 en Londrina, el zurdo punta que mide 1,92 metro y pesa 85 kilos, sorteó varios momentos complicados en su vida. Nació en una favela, tuvo leucemia de chico, un accidente desembocó en más de cien puntos de sutura en un brazo y hasta afrontó una suspensión por consumo de marihuana.</p> 
+        </div>
+        <div class="regoBR"> 
+            <img src="../assets/imagenes/RegoBR2.png" style="border-radius: 40%;"> 
+            <p>Emanuel Fernando Scheffler Rego (Curitiba, Brasil, 15 de abril de 1973) es un jugador de voleibol de playa brasileño. Tiene 3 medallas olímpicas: oro en Atenas 2004, plata en Londres 2012 y bronce en Beijing 2008. También fue tres veces campeón del mundo (1999, 2003 y 2011). Se retiró como el único atleta de voleibol de playa que ha participado en cinco ediciones de los Juegos Olímpicos (1996 a 2012), junto a la australiana Natalie Cook</p> 
+        </div>
     </div>
     <h1 class="canchas">Mapa de algunas canchas de voley</h1>
     <div class="mapa">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d37706.700729251126!2d-58.52282834595!3d-34.577579778973316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20voley!5e0!3m2!1ses-419!2sar!4v1732062086454!5m2!1ses-419!2sar" width="600px" height="500px"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d37706.700729251126!2d-58.52282834595!3d-34.577579778973316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20voley!5e0!3m2!1ses-419!2sar!4v1732062086454!5m2!1ses-419!2sar" width="100%" height="100%"></iframe>
     </div>
     <h1>carrusel</h1>
-    <div class="container">
+    <div class="cont-vol5">
         <input type="radio" name="slider" id="s1" checked />
         <input type="radio" name="slider" id="s2" />
         <input type="radio" name="slider" id="s3" />
