--- a/paginas/Nutricion.html
+++ b/paginas/Nutricion.html
@@ -340,12 +340,12 @@
             <div class="footer-content">
                 <h3>Paginas</h3>
                 <ul class="list">
-                    <li><a href="" class="a-footer">Futbol</a></li>
-                    <li><a href="" class="a-footer">Tenis</a></li>
-                    <li><a href="" class="a-footer">Natación</a></li>
-                    <li><a href="" class="a-footer">Hockey</a></li>
-                    <li><a href="" class="a-footer">Voley</a></li>
-                    <li><a href="" class="a-footer">Basquet</a></li>
+                    <li><a href="../paginas/Futbol.html" class="a-footer">Futbol</a></li>
+                    <li><a href="../paginas/Tenis.html" class="a-footer">Tenis</a></li>
+                    <li><a href="../paginas/Natacion.html" class="a-footer">Natación</a></li>
+                    <li><a href="../paginas/Hockey.html" class="a-footer">Hockey</a></li>
+                    <li><a href="../paginas/Volley.html" class="a-footer">Voley</a></li>
+                    <li><a href="../paginas/Basquetball.html" class="a-footer">Basquet</a></li>
                 </ul>
             </div>
             <div class="footer-content">
@@ -359,7 +359,7 @@
             </div>
         </div>
         <div class="bottom-bar">
-            <p>&copy; 2024 Your comapny . all rights reserved</p>
+            <p>&copy; 2024 Healthy Balance© . todos los derechos reservados</p>
         </div>
     </footer>
 
