--- a/index.html
+++ b/index.html
@@ -134,6 +134,40 @@
 
     </main>
 
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <h3>Contact Ups</h3>
+                <p>Gmail:infotdbas@udsasbfua</p>
+                <p>Numero:4124142141244</p>
+                <p>Informacion:</p>
+            </div>
+            <div class="footer-content">
+                <h3>Paginas</h3>
+                <ul class="list">
+                    <li><a href="paginas/Futbol.html" class="a-footer">Futbol</a></li>
+                    <li><a href="paginas/Tenis.html" class="a-footer">Tenis</a></li>
+                    <li><a href="paginas/Natacion.html" class="a-footer">Natación</a></li>
+                    <li><a href="paginas/Hockey.html" class="a-footer">Hockey</a></li>
+                    <li><a href="paginas/Volley.html" class="a-footer">Voley</a></li>
+                    <li><a href="paginas/Basquetball.html" class="a-footer">Basquet</a></li>
+                </ul>
+            </div>
+            <div class="footer-content">
+                <ul class="social-icons">
+                    <h3>Redes</h3>
+                     <li><a href="" class="a-footer"><i class="fab fa-facebook"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-twitter"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="" class="a-footer"><i class="fab fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="bottom-bar">
+            <p>&copy; 2024 Healthy Balance© . todos los derechos reservados</p>
+        </div>
+    </footer>
+
 
 </body>
 </html>
