--- a/paginas/Volley.html
+++ b/paginas/Volley.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/mainV.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" href="assets/iconos/logo.png" type="image/x-icon">
     <title>Healthy Balance</title>
 </head>
 <body>
