--- a/paginas/Nutricion.html
+++ b/paginas/Nutricion.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina sobre la buena alimentacion y nutricion, que beneficios te da a la salud, que metodos ayudan a mejorar tu estado fisico y diferentes dietas y rutinas">
+    <meta name="keywords" content="Nutricion, alimentacion, salud, sano, comer, comida, rutina, ejercicio, dieta, cuidado, bienestar, ubicacion de gimnacio, argentina, nutricionista">
     <link rel="icon" href="../assets/iconos/logo.png" type="image/x-icon">
     <title>Nutricion</title>
 </head>
