--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="../css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina destinada al informacion del Basquetball, reglas del juego para aprender,  jugadores reconocidos, mejoras para tu cuerpo y accesorios para jugar con un mapa para encontar canchas y zonas de juegos">
+    <meta name="keywords" content="Basquetball, deporte, salud, cuidado, bienestar, NBA, argentina, canchas, zonas de juego, Basquet, Baloncesto, ejercicio, Karl Anthony Malone, Charles Wade Barkley, John Houston Stockton, remeras, pantalon, zapatillas, vincha, rodillera, pelota">
+
     <link rel="icon" href="assets/iconos/logo.png" type="image/x-icon">
     <title>Basquets</title>
 </head>
