colores pag princ y keywords volley

--- a/paginas/Volley.html
+++ b/paginas/Volley.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/mainV.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina de volley con informacion sobre reglas y como se juega, mejoras a la salud, ubicaciones para jugar y accesorios para el deporte">
+    <meta name="keywords" content="Volley, ejercicio, salud, bienestar, deporte, TyCsports, espn, canchas de volley arg, argentina, zapatilla, rodillera, ropa para voley, red, pelota, mangas para volley, seleccion de volley arg">
     <link rel="icon" href="assets/iconos/logo.png" type="image/x-icon">
     <title>Healthy Balance</title>
 </head>
