--- a/paginas/Natacion.html
+++ b/paginas/Natacion.html
@@ -12,24 +12,23 @@
 </head>
 <body>
     <header class="row container-fluid" id="header">
-        <div class="logoP col-lg-7">
+        <div class="logoP col-lg-7 col-sm-12">
             <img src="../assets/iconos/logo.png" alt="">
             <h1>Healthy Balance</h1>
         </div>
 
-        <div class="maslogos col-lg-5">
+        <div class="maslogos col-lg-5 col-sm-12" >
             <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
             <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
             <a href="" data-bs-toggle="dropdown"><img class="menu" src="../assets/iconos/menu.png" alt=""></a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="">Inicio</a>
-                <a class="dropdown-item" href="">Nutricion</a>
-                <a class="dropdown-item" href="paginas/Futbol.html">Futbol</a>
-                <a class="dropdown-item" href="">Tenis</a>
-                <a class="dropdown-item" href="">Basket</a>
-                <a class="dropdown-item" href="">Voley</a>
-                <a class="dropdown-item" href="">Natacion</a>
-                <a class="dropdown-item" href="">Hockey</a>
+                <a class="dropdown-item" href="../index.html">Inicio</a>
+                <a class="dropdown-item" href="../paginas/Nutricion.html">Nutricion</a>
+                <a class="dropdown-item" href="../paginas/Futbol.html">Futbol</a>
+                <a class="dropdown-item" href="../paginas/Tenis.html">Tenis</a>
+                <a class="dropdown-item" href="../paginas/Basquetball.html">Basket</a>
+                <a class="dropdown-item" href="../paginas/Volley.html">Voley</a>
+                <a class="dropdown-item" href="../paginas/Natacion.html">Natacion</a>
             </div>
         </div>
     </header>
@@ -84,7 +83,7 @@
 
         <div class="titulo"><h1>Consejos del Deporte</h1></div>
 
-        <div class="cont">
+        <div class="contHo">
           <div class="card2">
             <img src="../assets/imagenes/consejos1.webp" alt="">
             <div class="card2-body">
