--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -105,26 +105,26 @@
             <div class="footer-content">
                 <h3>Paginas</h3>
                 <ul class="list">
-                    <li><a href="" class="a-footer">Futbol</a></li>
-                    <li><a href="" class="a-footer">Tenis</a></li>
-                    <li><a href="" class="a-footer">Natación</a></li>
-                    <li><a href="" class="a-footer">Hockey</a></li>
-                    <li><a href="" class="a-footer">Voley</a></li>
-                    <li><a href="" class="a-footer">Basquet</a></li>
+                    <li><a href="../paginas/Futbol.html" class="a-footer">Futbol</a></li>
+                    <li><a href="../paginas/Tenis.html" class="a-footer">Tenis</a></li>
+                    <li><a href="../paginas/Natacion.html" class="a-footer">Natación</a></li>
+                    <li><a href="../paginas/Hockey.html" class="a-footer">Hockey</a></li>
+                    <li><a href="../paginas/Volley.html" class="a-footer">Voley</a></li>
+                    <li><a href="../paginas/Basquetball.html" class="a-footer">Basquet</a></li>
                 </ul>
             </div>
             <div class="footer-content">
                 <ul class="social-icons">
                     <h3>Redes</h3>
-                     <li><a href="" class="a-footer"><i class="fab fa-facebook"></i></a></li>
-                     <li><a href="" class="a-footer"><i class="fab fa-twitter"></i></a></li>
-                     <li><a href="" class="a-footer"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="" class="a-footer"><i class="fab fa-linkedin"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-facebook"><img src="../assets/iconos/facebook logo.png" height="50px"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-twitter"><img src="../assets/iconos/twitter logo.png" height="50px"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-instagram"><img src="../assets/iconos/instagram logo.png" height="50px"></i></a></li>
+                    <li><a href="" class="a-footer"><i class="fab fa-linkedin"><img src="../assets/iconos/linkedin logo.png" height="50px"></i></a></li>
                 </ul>
             </div>
         </div>
         <div class="bottom-bar">
-            <p>&copy; 2024 Your comapny . all rights reserved</p>
+            <p>&copy; 2024 Healthy Balance© . todos los derechos reservados</p>
         </div>
     </footer>
 </body>
