--- a/paginas/Tenis.html
+++ b/paginas/Tenis.html
@@ -9,7 +9,7 @@
     <title>Deportes-  -Tenis</title>
     <meta name="description" content="Pagina sobre le tenis como se juega, mejoras que notaras en tu cuerpo con este deporte y donde jugarlo ">
     <meta name="keywords" content="Tenis, Raqueta de Tenis, Pelota de Tenis, Ejercicio, Canchas tenis, escuela tenis, argentina tenis, como se juega al tenis, salud, deporte, tyc sport, espn">
-    <link rel="icon" href="assets/iconos/logo.png" type="image/x-icon">
+    <link rel="icon" href="../assets/iconos/logo.png" type="image/x-icon">
 </head>
 <body>
     <header class="row container-fluid" id="header">
