--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -16,7 +16,7 @@
     <header class="row container-fluid" id="header">
         <div class="logoP col-lg-7">
             <img src="../assets/iconos/logo.png" alt="">
-            <h1>Healthy Balance</h1>
+            <h1>basket</h1>
         </div>
         <div class="maslogos col-lg-5">
             <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
@@ -64,39 +64,37 @@
             </div>
         </div>
     </div>
-    <br>
-    <div class="container">
-        <div class="card">
-            <img src="../assets/imagenes/logo-Golden State.jpg" width="310" height="250">
-            <div class="card__head">Golden State
-            </div>
-            <div class="card__head">Dueño:Joe Lacob</div>
-        </div>
-        <div class="card">
-            <img src="../assets/imagenes/logo-clippers.png" width="240" height="250">
-            <div class="card__head">Los Angeles Clippers
-            </div>
-            <div class="card__head">Dueño:Steve Ballmer</div>
-        </div>
-        <div class="card">
-            <img src="../assets/imagenes/logo-lakers.png" width="290" height="250">
-            <div class="card__head">Los Angeles Lakers</div>
-            <div class="card__head">Dueño:Jeanie Buss</div>
-        </div>
-        <div class="card" >
-            <img src="../assets/imagenes/logo-phoenix2.avif" width="275" height="250">
-            <div class="card__head">Phoenix Suns</div>
-            <div class="card__head">Dueño:Mat Ishbia</div>
-        </div>
-    </div>
 
-    
-    <h1>Mapa de algunas cnachas de basket</h1>
-    <div class="mapaB">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d420384.05858289736!2d-58.4161919700843!3d-34.59782771278762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20basquet!5e0!3m2!1ses-419!2sar!4v1732482785890!5m2!1ses-419!2sar"></iframe>
-    </div>
-    <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-
+    <div class="padre1 row container-fluid">
+      <h1>Equipos profesional de basket</h1>
+      <br>
+      <div class="Malone" style="width: 20rem;">
+          <img src="../assets/imagenes/logo-lakers.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Los Angeles Lakers son un equipo profesional de baloncesto de los Estados Unidos con sede en Los Ángeles,
+               California. Compiten en la División Pacífico de la Conferencia Oeste de la National Basketball Association y disputan sus 
+               partidos como locales en el Crypto.com Arena, ubicado en el downtown de la ciudad​.</p>
+          </div>
+      </div>
+      <br>
+      <div class="Barkley" style="width: 20rem;">
+          <img src="../assets/imagenes/logo-Golden_State-removebg-preview.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Los Warriors son una de las tres franquicias originales de la NBA que sobreviven en la actualidad,Nota 1​ y 
+              a lo largo de su historia han ganado un total de siete campeonatos de liga (son el tercer equipo más laureado de la competición,
+               únicamente por detrás de los Boston Celtics y Los Angeles Lakers), siete títulos de Conferencia y doce títulos divisionales. </p>
+          </div>
+      </div>
+      <br>
+      <div class="Jonh" style="width: 20rem;">
+          <img src="../assets/imagenes/logo-phoenix-removebg-preview.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Los Phoenix Suns son un equipo profesional de baloncesto de los Estados Unidos con sede en Phoenix, Arizona.
+               Compiten en la División Pacífico de la Conferencia Oeste de la National Basketball Association y disputan sus partidos como local
+               es en el Footprint Center, ubicado en el centro de la ciudad de Phoenix.</p>
+          </div>
+      </div>
+  </div>
     <div id="carouselExampleCaptions" class="carousel slide carrusel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -117,21 +115,6 @@
               <h5>Zapatillas</h5>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="" class="d-block w-100 carrusel-img">
-            <div class="carousel-caption d-none d-md-block">
-              <h5></h5>
-            </div>
-          </div>
-
-          <div class="carousel-item">
-            <img src="../assets/imagenes/ropabas.png" class="d-block w-100">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/imagenes/zapatosbol.png" class="d-block w-100">
-          </div>
-
-
     <section class="row">
         <div class="cont1 contBordes col-lg-4">
             <img src="" class="juador1">
@@ -148,40 +131,41 @@
     </div>
     <h1 class="titulo-mapa">Mapa de algunas canchas de basket</h1>
     <div class="mapaB">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d420384.05858289736!2d-58.4161919700843!3d-34.59782771278762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20basquet!5e0!3m2!1ses-419!2sar!4v1732482785890!5m2!1ses-419!2sar"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d420384.05858289736!2d-58.4161919700843!3d-34.59782771278762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20basquet!5e0!3m2!1ses-419!2sar!4v1732482785890!5m2!1ses-419!2sar" width="1000px" height="500px"></iframe>
     </div>
     <footer>
-        <div class="container">
-            <div class="footer-content">
-                <h3>Contact Ups</h3>
-                <p>Gmail:infotdbas@udsasbfua</p>
-                <p>Numero:4124142141244</p>
-                <p>Informacion:</p>
-            </div>
-            <div class="footer-content">
-                <h3>Paginas</h3>
-                <ul class="list">
-                    <li><a href="Futbol.html" class="a-footer">Futbol</a></li>
-                    <li><a href="Tenis.html" class="a-footer">Tenis</a></li>
-                    <li><a href="Natacion.html" class="a-footer">Natación</a></li>
-                    <li><a href="Hockey.html" class="a-footer">Hockey</a></li>
-                    <li><a href="Volley.html" class="a-footer">Voley</a></li>
-                    <li><a href="Nutricion.html" class="a-footer">Nutricion</a></li>
-                </ul>
-            </div>
-            <div class="footer-content">
-                <ul class="social-icons">
-                    <h3>Redes</h3>
-                     <li><a href="" class="a-footer"><i class="fab fa-facebook"></i></a></li>
-                     <li><a href="" class="a-footer"><i class="fab fa-twitter"></i></a></li>
-                     <li><a href="" class="a-footer"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="" class="a-footer"><i class="fab fa-linkedin"></i></a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="bottom-bar">
-            <p>&copy; 2024 Your comapny . all rights reserved</p>
-        </div>
-    </footer>
+      <div class="container">
+          <div class="footer-content">
+              <h3>Contact Ups</h3>
+              <p>Gmail:infotdbas@udsasbfua</p>
+              <p>Numero:4124142141244</p>
+              <p>Informacion:El basket es un deporte de equipo, jugado entre dos conjuntos de cinco jugadores cada uno en cuatro períodos de 
+                cuartos de diez minutos cada uno4​ ,doce minutos cada cuarto en la NBA. El objetivo del equipo es anotar puntos introduciendo 
+                un balón por la canasta, un aro a 3,05 metros sobre la superficie de la pista de juego del que cuelga una red.</p>
+          </div>
+          <div class="footer-content">
+              <h3>Paginas</h3>
+              <ul class="list">
+                  <li><a href="">Futbol</a></li>
+                  <li><a href="">Tenis</a></li>
+                  <li><a href="">Natación</a></li>
+                  <li><a href="">Hockey</a></li>
+                  <li><a href="">Voley</a></li>
+                  <li><a href="">Basquet</a></li>
+              </ul>
+          </div>
+          <div class="footer-content">
+              <ul class="social-icons">
+                  <h3>Redes</h3>
+                   <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                   <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                   <li><a href=""><i class="fab fa-instagram"></i></a></li>
+              </ul>
+          </div>
+      </div>
+      <div class="bottom-bar">
+          <p>&copy; 2023</p>
+      </div>
+  </footer>
 </body>
 </html>
