arreglo pag iniciar sesion

--- a/paginas/IniciarSesion.html
+++ b/paginas/IniciarSesion.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <form action="#">
-            <img src="assets/imagenes/inicar-listo.png" >
+            <img src="../assets/imagenes/inicar-listo.png" >
             <h2>Bienvenido</h2>
             <div class="input-field">
                 <input type="text" required placeholder="Gmail">
