--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -18,8 +18,8 @@
             <h1>FUTBOL</h1>
         </div>
         <div class="maslogos col-lg-5">
-            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
-            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
+            <button type="button" class="btn btn-outline-light"><a href="../paginas/registro.html"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></a></button>
+            <button type="button" class="btn btn-outline-light"><a href="../paginas/IniciarSesion.html"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></a></button>            
             <a href="" data-bs-toggle="dropdown"><img class="menu" src="../assets/iconos/menu.png" alt=""></a>
             <div class="dropdown-menu">
                 <a class="dropdown-item" href="../index.html">Inicio</a>
