--- a/paginas/Volley.html
+++ b/paginas/Volley.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina de volley con informacion sobre reglas y como se juega, mejoras a la salud, ubicaciones para jugar y accesorios para el deporte">
     <meta name="keywords" content="Volley, ejercicio, salud, bienestar, deporte, TyCsports, espn, canchas de volley arg, argentina, zapatilla, rodillera, ropa para voley, red, pelota, mangas para volley, seleccion de volley arg">
-    <link rel="icon" href="assets/iconos/logo.png" type="image/x-icon">
+    <link rel="icon" href="../assets/iconos/logo.png" type="image/x-icon">
     <title>Healthy Balance</title>
 </head>
 <body>
@@ -33,16 +33,16 @@
             </div>
         </div>
     </header>
-    <div class="padre1 col-lg-6">
+    <div class="padre1 col-lg-12">
       <h1>Voley</h1>
       <p class="parrafo1 animado">El voleibol, o vóley, es un deporte de equipo donde dos grupos de seis jugadores se enfrentan en una cancha 
         dividida por una roja. El objetivo es pasar el balón por encima de la red y hacerlo tocar el suelo del lado 
         contrario, respetando un máximo de tres toques por equipo. Se juega al mejor de cinco sets, ganando cada uno
         al llegar a 25 puntos con una diferencia mínima de 2. Es un deporte popular, con variantes como el voleibol
         de playa y el sentado.</p>
-        <div class="padre2">
+        <div class="padre2 col-lg-5">
           <h1>Como mejorar en el voley</h1>
-          <div class="contvol">
+          <div class="contvol col-lg-5">
                 <div>
                     <img src="../assets/imagenes/voley1.png" width="100%" height="100%" class="img1">
                         <h2 class="tecnicas"> Practicar las técnicas básicas:</h2>
@@ -50,7 +50,7 @@
                             peso en las piernas. Es importante aprender a arrastrar los pies de manera lateral.</p>
                 </div>
             </div>
-            <div class="contvol-2"> 
+            <div class="contvol-2 col-lg-8"> 
                 <div>
                     <img src="../assets/imagenes/voley2.png"  width="100%" height="100%" class="img2">
                     <h2 class="forma">Ponernos en forma</h2>
@@ -58,7 +58,7 @@
                         resistencia de fondo y mayor potencia.</p>
                 </div>
             </div>
-            <div class="contvol-3"> 
+            <div class="contvol-3 col-lg-8"> 
                 <div>
                     <img src="../assets/imagenes/voley3.png"  width="100%" height="100%" class="img3">
                     <h2 class="lesiones">Prevenir las lesiones:</h2>
@@ -69,7 +69,7 @@
             </div>
         </div>
         <br>
-        <div class="contvol-4">
+        <div class="contvol-4 col-lg-8">
           <h1 class="jugadores">Los 3 jugadores mas importantes del voley</h1>
             <div class="karchEEUU"> 
                     <img src="../assets/imagenes/karchEEUU.png" style="border-radius: 40px;" width="520px" height="200px"> 
@@ -85,11 +85,11 @@
             </div>
         </div>
         <h1 class="canchas">Mapa de algunas canchas de voley</h1>
-        <div class="mapa">
+        <div class="mapa col-lg-4">
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d37706.700729251126!2d-58.52282834595!3d-34.577579778973316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20voley!5e0!3m2!1ses-419!2sar!4v1732062086454!5m2!1ses-419!2sar" width="100%" height="100%"></iframe>
         </div>
         <h1>cosas que necesitas para jugar al voley</h1>
-        <div class="contvol-5">
+        <div class="contvol-5 col-lg-7">
             <input type="radio" name="slider" id="s1" checked />
             <input type="radio" name="slider" id="s2" />
             <input type="radio" name="slider" id="s3" />
@@ -216,6 +216,39 @@
               </label>
             </div>
           </div>
+          <footer>
+            <div class="container">
+                <div class="footer-content">
+                    <h3>Contact Ups</h3>
+                    <p>Gmail:infotdbas@udsasbfua</p>
+                    <p>Numero:4124142141244</p>
+                    <p>Informacion:</p>
+                </div>
+                <div class="footer-content">
+                    <h3>Paginas</h3>
+                    <ul class="list">
+                        <li><a href="../paginas/Futbol.html" class="a-footer">Futbol</a></li>
+                        <li><a href="../paginas/Tenis.html" class="a-footer">Tenis</a></li>
+                        <li><a href="../paginas/Natacion.html" class="a-footer">Natación</a></li>
+                        <li><a href="../paginas/Hockey.html" class="a-footer">Hockey</a></li>
+                        <li><a href="../paginas/Volley.html" class="a-footer">Voley</a></li>
+                        <li><a href="../paginas/Basquetball.html" class="a-footer">Basquet</a></li>
+                    </ul>
+                </div>
+                <div class="footer-content">
+                    <ul class="social-icons">
+                        <h3>Redes</h3>
+                         <li><a href="" class="a-footer"><i class="fab fa-facebook"><img src="../assets/iconos/facebook logo.png" height="50px"></i></a></li>
+                         <li><a href="" class="a-footer"><i class="fab fa-twitter"><img src="../assets/iconos/twitter logo.png" height="50px"></i></a></li>
+                         <li><a href="" class="a-footer"><i class="fab fa-instagram"><img src="../assets/iconos/instagram logo.png" height="50px"></i></a></li>
+                        <li><a href="" class="a-footer"><i class="fab fa-linkedin"><img src="../assets/iconos/linkedin logo.png" height="50px"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bottom-bar">
+                <p>&copy; 2024 Healthy Balance© . todos los derechos reservados</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
