footer pag princ

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     </main>
 
-    <footer>
+    <footer id="margen">
         <div class="container">
             <div class="footer-content">
                 <h3>Contact Ups</h3>
@@ -156,10 +156,10 @@
             <div class="footer-content">
                 <ul class="social-icons">
                     <h3>Redes</h3>
-                     <li><a href="" class="a-footer"><i class="fab fa-facebook"></i></a></li>
-                     <li><a href="" class="a-footer"><i class="fab fa-twitter"></i></a></li>
-                     <li><a href="" class="a-footer"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="" class="a-footer"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="" class="a-footer"><i class="fab fa-facebook"><img src="assets/iconos/facebook logo.png" height="50px"></i></a></li>
+                    <li><a href="" class="a-footer"><i class="fab fa-twitter"><img src="assets/iconos/twitter logo.png" height="50px"></i></a></li>
+                    <li><a href="" class="a-footer"><i class="fab fa-instagram"><img src="assets/iconos/instagram logo.png" height="50px"></i></a></li>
+                   <li><a href="" class="a-footer"><i class="fab fa-linkedin"><img src="assets/iconos/linkedin logo.png" height="50px"></i></a></li>
                 </ul>
             </div>
         </div>
